--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
               <li>Python</li>
               <li>Rails</li>
               <li>Ruby</li>
-              <li>Salesforce</li>
               <li>WebMethods</li>
               <li>XML</li>
             </ul>
@@ -81,10 +80,10 @@
               <li>Go</li>
               <li>Heroku</li>
               <li>Java</li>
+              <li>Kafka</li>
               <li>Lua</li>
               <li>MySQL</li>
               <li>Node.js</li>
-              <li>Oracle</li>
               <li>RabbitMQ</li>
               <li>React</li>
               <li>Redux</li>
@@ -169,7 +168,7 @@
             </div>
           </div>
           <div class="notable-achievements">
-            <h2>Notable achievements</h2>
+            <h2>Projects</h2>
             <div class="experience-item">
               <div class="heading">
                 <h3>Owlery</h3>
