--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="My name is Viktor Alex Brynjarsson. I am a programmer working in Iceland. Currently I am working at one of Iceland's largest telecommunication and broadcasting companies.">
+    <meta name="description" content="My name is Viktor Alex Brynjarsson and I am a programmer.">
     <title>Viktor Alex Brynjarsson</title>
     <link rel="icon" type="image/png" href="/favicon.png">
     <link href="/css/main.css" rel="stylesheet" type="text/css">
@@ -23,9 +23,7 @@
       </h1>
       <div class="description">
         <p>
-        My name is <a href="mailto:viktoralex+web@viktoralex.is" class="name">Viktor Alex Brynjarsson</a>.
-        I am a programmer working in Iceland.
-        Currently I am working at one of Iceland's largest telecommunication and broadcasting companies.
+        My name is <a href="mailto:viktoralex+web@viktoralex.is" class="name">Viktor Alex Brynjarsson</a> and I am a programmer.
         </p>
       </div>
       <div class="cv">
@@ -34,7 +32,7 @@
             <h2>Interests</h2>
             <ul>
               <li>Beer</li>
-              <li>Drawing</li>
+              <li>Family</li>
               <li>Food</li>
               <li>LEGO</li>
               <li>Linux</li>
@@ -59,9 +57,11 @@
               <li>Flask</li>
               <li>Git</li>
               <li>Gitlab CI</li>
+              <li>Go</li>
               <li>HTML</li>
               <li>JSON</li>
               <li>JavaScript</li>
+              <li>Kinesis</li>
               <li>Kubernetes</li>
               <li>Linux</li>
               <li>MSSQL</li>
@@ -69,6 +69,7 @@
               <li>Python</li>
               <li>Rails</li>
               <li>Ruby</li>
+              <li>Scala</li>
               <li>WebMethods</li>
               <li>XML</li>
             </ul>
@@ -77,7 +78,6 @@
             <h2>Tried</h2>
             <ul>
               <li>AMQP</li>
-              <li>Go</li>
               <li>Heroku</li>
               <li>Java</li>
               <li>Kafka</li>
@@ -100,8 +100,17 @@
             <h2>Work experience</h2>
             <div class="experience-item">
               <div class="heading">
+                <h3>Gangverk</h3>
+                <div class="time">February 2021 - <em>current</em></div>
+              </div>
+              <em class="subtitle">Senior Developer</em>
+              <p>Backend tech lead for the Cataloging team working for Sotheby's. Maintaining and creating microservices including setting up helm charts and applying terraform changes. Services are written in Go and Scala, data is stored in PostgreSQL, and communication between them is done via GraphQL, gRPC and Kinesis.</p>
+              <p><a href="https://gangverk.is/">https://gangverk.is/</a></p>
+            </div>
+            <div class="experience-item">
+              <div class="heading">
                 <h3>Sýn / Vodafone & 365 Media</h3>
-                <div class="time">July 2013 - <em>current</em></div>
+                <div class="time">July 2013 - February 2021</div>
               </div>
               <em class="subtitle">Senior Developer, telecommunications</em>
               <p>Senior developer working in teams of various sizes from 3 to 7. Writing and maintaining applications in .NET Core, Python, Ruby and Java. These applications include integrations between systems, microservices for business rules which need to be accessible from multiple front-ends, and business processes for billing and product fulfilment. I was hired by 365 Media which was acquired by Sýn which owns the Vodafone brand in Iceland.</p>
@@ -148,7 +157,7 @@
             <div class="experience-item">
               <div class="heading">
                 <h3>B.Sc. in Computer Science</h3>
-                <div class="time">June 2019</div>
+                <div class="time">graduated June 2019</div>
               </div>
               <em class="subtitle">University of Iceland</em>
             </div>
