Update wording in CV

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="time">February 2021 - <em>current</em></div>
               </div>
               <em class="subtitle">Senior Developer</em>
-              <p>Backend tech lead for the Cataloging team working for Sotheby's. Maintaining and creating microservices including setting up helm charts and applying terraform changes. Services are written in Go and Scala, data is stored in PostgreSQL, and communication between them is done via GraphQL, gRPC and Kinesis.</p>
+              <p>Backend tech lead for the Cataloging team working for Sotheby's. Maintaining and creating microservices written in Go and Scala, writing documentation and unblocking team members. The system is built on an event driven architecture with data stored in PostgreSQL and communication between services using GraphQL, gRPC and Kinesis. Services my team is responsible for include simple CRUD services, integrations with other systems including analytics and ERP, and other support services.</p>
               <p><a href="https://gangverk.is/">https://gangverk.is/</a></p>
             </div>
             <div class="experience-item">
